--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,7 @@
   --social-color-2: #55acee;
   --social-color-3: #dd4b39;
   --social-color-4: #00b489;
+  --social-color-5: #2867B2;
   --white-color: #ffffff;
   --primary-t-color: #222;
   --primary-p-color: #565656;
@@ -727,6 +728,10 @@ img {
 
 .social-icons > a.vine {
   background-color: var(--social-color-4) !important;
+}
+
+.social-icons > a.linkedin {
+  background-color: var(--social-color-5) !important;
 }
 
 /*BACKGROUND IMAGES*/
@@ -2026,6 +2031,13 @@ img {
 /* ******************************
 :: 19.0 TEAM AREA CSS
 ****************************** */
+.join-us {
+  cursor: pointer;
+  border-radius: 1rem;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
 .single-team {
   border-radius: 1rem;
   -webkit-transition: all 0.3s ease 0s;
