--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -669,6 +669,18 @@ img {
   z-index: -1;
 }
 
+.bg-overlay-2::after {
+  position: absolute;
+  content: '';
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background: #D98C18;
+  z-index: -1;
+}
+
+
 .overlay-dark {
   position: relative;
   z-index: 0;
@@ -937,7 +949,7 @@ img {
   right: 2%;
   bottom: 3%;
   border-radius: 4px;
-  background-color: rgba(35, 35, 35, 0.65);
+  background-color: #D98C18;
   text-align: center;
   cursor: pointer;
   -webkit-transition: all 0.4s ease-in-out 0s;
@@ -1757,6 +1769,10 @@ img {
   transition: all 0.3s ease 0s;
 }
 
+.service-text > p{
+  font-size: 1.2rem;
+}
+
 /* ******************************
 :: 12.0 DISCOVER AREA CSS
 ****************************** */
@@ -1769,6 +1785,7 @@ img {
     max-width: 300px;
   }
 }
+
 
 /* ******************************
 :: 13.0 WORK AREA CSS
