--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2839,4 +2839,74 @@ img {
     line-height: 1.3;
   }
 }
+
+/* ******************************
+:: 30.0  COOKIES POPUP STYLES
+****************************** */
+
+.cookie-popup {
+  
+  font-size: 0.875rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  position: fixed;
+  bottom: -6.25rem;
+  left: 1.25rem;
+  right: 1.25rem;
+  padding: 0.925rem 1.2375rem;
+  box-shadow: 0 0 0.625rem 0 rgba(0,0,0, .15);
+  line-height: 150%;
+  transition: opacity .5s;
+  opacity: 0;
+  z-index: 500;
+}
+.cookie-popup--short {
+  right: none;
+  width: 21.875rem; 
+}
+.cookie-popup--dark {
+  background: #222;
+  color: #fff;
+}
+.cookie-popup--not-accepted {
+  opacity: 1;
+  animation: cookie-popup-in .5s ease forwards;  
+}
+.cookie-popup--accepted {
+  opacity: 0;
+}
+.cookie-popup a {
+  color: skyblue;
+}
+.cookie-popup a:visited {
+  color: skyblue;
+  text-decoration: none;
+}
+.cookie-popup-actions {
+  flex: 1;
+  text-align: right;
+}
+.cookie-popup-actions button {
+  color: #D98C18;
+  border: none;
+  background: none;
+  font-family: inherit;
+  font-style: inherit;
+  font-size: inherit;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 	0.75rem;
+  padding: 0;
+  cursor: pointer;
+}
+.cookie-popup-actions button:hover {
+  text-decoration: underline;
+}
+
+@keyframes cookie-popup-in {
+  from { bottom: -6.25rem; }
+  to { bottom: 1.25rem; }
+}
+
 /*# sourceMappingURL=style.css.map */
